[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmodeling_sphinx"
dynamic = ["version"]
description = "Sphinx extension for DeepModeling projects."
authors = [
  {name = "DeepModeling"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'sphinx',
    'minify-html!=0.16.*,!=0.17.0',
    'jsmin',
    'cssmin',
    'jinja2',
]
requires-python = ">=3.7"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/deepmodeling/deepmodeling_sphinx"
documentation = "https://docs.deepmodeling.com/projects/deepmodeling-sphinx/"
repository = "https://github.com/deepmodeling/deepmodeling_sphinx"

[tool.setuptools.package-data]
deepmodeling_sphinx = [
    'banner.html',
    'banner.css',
    'banner.js',
    'dark_rtd.css',
]

[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "I", # isort
]
